--- a/WS03/index.html
+++ b/WS03/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>My first Heading</h1>
     <p>My first paragraph.</p>
+    <p>My second paragraph.</p>
+    <p>My third paragraph.</p>
 </body>
 
 </html>
