--- a/WS03/index.html
+++ b/WS03/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html lang="fi">
+<html>
 
 <head>
+    <title>My HTML page</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/styles.css"
-    <title>WS03 Exercise</title>
+    <meta name="description" content="My HTML page">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css">
 </head>
 
-<body>
-    <h1>My first Heading</h1>
-    <p>My first paragraph.</p>
-    <p>My second paragraph.</p>
-    <p>My third paragraph.</p>
+<body class="center">
+    <h1 class="red">Heading 1</h1>
+    <p class="blue">This is a paragraph with the blue class.</p>
+    <div class="green">
+        <h2>Heading 2</h2>
+        <p>This is a paragraph inside a div with the green class</p>
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
+    </div>
+    <a href="https://www.laurea.fi" class="red">Laurea</a>
 </body>
 
 </html>
