--- a/Tehtävä 03B Configuring Color and Text/index.html
+++ b/Tehtävä 03B Configuring Color and Text/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <title>Testing Styles</title>
     <link rel="stylesheet" href="styles.css">
@@ -7,7 +8,7 @@
 <body>
     <h1>Testing different Styles</h1>
     <p> There are lots of different styles you can use to develope web pages.</p>
-    <div class="Teksti">using class selector</div>
+    <div class="Teksti">Using class selector</div>
     <p>Next two steps you should to, that you can appear styles in your webpage:</p>
     <ol>
         <li>Make file of styles</li>
