--- a/Tehtävä 04B Visual elements and graphics/second.html
+++ b/Tehtävä 04B Visual elements and graphics/second.html
@@ -9,9 +9,16 @@
 <body>
     <h1>There will be some pictures</h1>
     <p>There I should put some pictures</p>
-    <p>
+    <div>
         <img src="./kuvat/colors.gif" alt="Different colors" id="colors" width="200px" height="200px">
-    </p>
+    <figure>
+        <img src="./kuvat/visual.jpg " alt="Second pic" id="visual" width="200px" height="200px">
+        <figcaption>This is second picture of visual effects</figcaption>
+        </figure> 
+    </div>
+    <label for="bar">Motivaatio tehtävissä</label>
+    <progress id="bar" value="89" max="100"> 89% </progress> <br>
+
     <a href="index.html">Back to the first page.</a>
 </body>
 </html>
