--- a/WS04/index.html
+++ b/WS04/index.html
@@ -12,7 +12,7 @@
     <a href="second.html" target="_self" id="linkki">Link to the Second html</a><br>
     <h1>Hello: tämä on minun WS04 index.html tidosto!</h1>
     <p>Tämä on p-tag</p>
-    <div class="Teksti">Hello</div>
+    <div class="teksti">Hello</div>
     <ol>
         <li>yksi</li>
         <li>yksi</li>
