--- a/WS04/second.html
+++ b/WS04/second.html
@@ -13,7 +13,7 @@
 
     <br>
     <p>
-        <img src="./Kuvat/postimies.jpg" alt="postimiespate" id="kuva1" width="200" height="200">
+        <img src="./Kuvat/postimiespate.jpg" alt="postimiespate" id="kuva1" width="200" height="200">
     </p>
     <figure>
         <figcaption>Puuhapete ja ystävät</figcaption>
