--- a/Tehtävä 6B - Web page/index.html
+++ b/Tehtävä 6B - Web page/index.html
@@ -29,7 +29,7 @@
     </nav>
     <div class="container">
         <article>
-            <h2>HTML - article </h2>
+            <h2>HTML - article about Winnie-the-Pooh </h2>
             <p>Winnie-the-Pooh is a 1926 children's book by English author A. A. Milne and English illustrator E. H. Shepard. 
                 The book is set in the fictional Hundred Acre Wood, with a collection of short stories following the adventures
                 of an anthropomorphic teddy bear, Winnie-the-Pooh, and his friends Christopher Robin, Piglet, Eeyore, Owl, Rabbit, 
