--- a/WS12/etusivu.html
+++ b/WS12/etusivu.html
@@ -12,8 +12,6 @@
     <header>
         <h1>Helsingin Viron Naiskuoro</h1>
         <button id="kirjaudu">Kirjaudu</button>
-    </header>
-
         <nav>
             <div class="wrapper">
                 <div>
@@ -30,9 +28,9 @@
                 </div>
             </div>
         </nav>
-
+    </header>
     <main>
-        <div class="sisältö">
+        <div class="sisalto">
             <div class="left">
             <h2>Tervetuloa Helsingin Viron Naiskuoron sivuille!</h2>
             <p>Naiskuoron tavoitteena on tarjota laulajille elämän- ja laulun iloa, musiikillisia haasteita, mahdollisuus 
@@ -54,8 +52,9 @@
                         Käpylän työväentalo, Vipusentie 19, 00610 Helsinki <br>
                         Kahvila avoinna ennen alkua ja väliajalla <br>
                     </p>
+                </div>
             </div>
-        </div>
+         </div>
 
     </main>
     <footer>
