--- a/WS12/meista.html
+++ b/WS12/meista.html
@@ -12,8 +12,6 @@
     <header>
         <h1>Helsingin Viron Naiskuoro</h1>
         <button id="kirjaudu">Kirjaudu</button>
-    </header>
-
         <nav>
             <div class="wrapper">
                 <div>
@@ -21,7 +19,7 @@
                 </div>
                 <div>
                     <a href="meista.html">Meistä</a>
-                </div>
+                </div>                
                 <div>
                     <a href="galleria.html">Galleria</a>
                 </div>
@@ -30,7 +28,7 @@
                 </div>
             </div>
         </nav>
-
+    </header>
     <main>
         <section>
             <p>HELSINGIN VIRON NAISKUORO perustettiin syksyllä 2017 kapellimestari Silver Lumin johdolla projektikuoroksi, joka kokosi Suomessa
@@ -49,7 +47,7 @@
                 
             <ul>Helsingin Viron Naiskuoron ikimuistoisimpia hetkiä ovat olleet:
                 <li>2020 musiikkivideon kuvaaminen kappaleeseen "Läksin metsään": 
-                    <a href="https://youtu.be/z_4tS5BT-Tg?si=DyWNgmLNVlLXh2rD">Läksin metsa</a></li>
+                    <a href="https://youtu.be/z_4tS5BT-Tg?si=DyWNgmLNVlLXh2rD" id="video">Katso tästä</a></li>
                 <li></li>2019 erikoispalkinto kansainvälisessä kuorojen pop/jazz-kilpailu-festivaalissa "LAULURAGIN 2019"</li>
                 <li></li>2019 esiintyminen Helsingin Martinmarkkinoilla</li>
                 <li></li>2019 osallistuminen suureen juhlalaulujuhlaan "Minun rakkaani" Tallinnassa</li>
