--- a/WS12/galleria.html
+++ b/WS12/galleria.html
@@ -16,56 +16,84 @@
 </head>
 
 <body>
-    <header>
-        <h1>Helsingin Viron Naiskuoro</h1>
-        <button id="kirjaudu">Kirjaudu</button>
-    </header>
-
-        <nav>
-            <div class="wrapper">
-                <div>
-                    <a href="etusivu.html">Etusivu</a>
-                </div>
-                <div>
-                    <a href="meista.html">Meistä</a>
-                </div>                
-                <div>
-                    <a href="galleria.html">Galleria</a>
-                </div>
-                <div>
-                    <a href="yhteystiedot.html">Yhteystiedot</a>
-                </div>
+  <header>
+    <h1>Helsingin Viron Naiskuoro</h1>
+    <button id="kirjaudu">Kirjaudu</button>
+    <nav>
+        <div class="wrapper">
+            <div>
+                <a href="etusivu.html">Etusivu</a>
             </div>
-        </nav>
-        <div id="carousel" class="carousel slide">
+            <div>
+                <a href="meista.html">Meistä</a>
+            </div>                
+            <div>
+                <a href="galleria.html">Galleria</a>
+            </div>
+            <div>
+                <a href="yhteystiedot.html">Yhteystiedot</a>
+            </div>
+        </div>
+    </nav>
+  </header>
+        <main>
+           <p> Tässä sivulla olemme tuoneet esille pienen valikoiman esityksissämme otetuista kuvista ja videoista. 
+            Jos haluat kuulla tai nähdä meitä enemmän, sinulla on kaksi vaihtoehtoa: joko liity kuoroomme tai 
+            odota seuraavaa konserttia.
+          </p>
+         <div id="carousel" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carousel" data-bs-slide-to="5" aria-label="Slide 6"></button>              
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./styles/Martin markkinat 2019.jpg" class="d-block w-100" alt="Martin Markkinat 2019">
+                <img src="./kuvat/laulupidu.jpg" class="d-block w-100" alt="">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Martin markkinat 2019</h5>
+                  <h5>Viron Laulujuhla 2019</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./styles/Martin markkinat 2019 (2).jpg" class="d-block w-100" alt="Martin markkinat 2019">
+                <img src="./kuvat/laulupidu2.jpg" class="d-block w-100" alt="">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Martin markkinat 2019</h5>
+                  <h5>Viron Laulujuhla 2019</h5>
                   <p>Some representative placeholder content for the second slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./styles/Laulupidu 2019.jpg" class="d-block w-100" alt="Laulupidu 2019">
+                <img src="./kuvat/markkinat.jpg" class="d-block w-100" alt="">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Laulupidu 2019</h5>
+                  <h5>Martin Markkinat 2019</h5>
                   <p>Some representative placeholder content for the third slide.</p>
                 </div>
               </div>
-            </div>
+               <div class="carousel-item">
+                <img src="./kuvat/markkinat2.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Martin Markkinat 2019</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+                <div class="carousel-item">
+                  <img src="./kuvat/kevadkonsert.jpg" class="d-block w-100" alt="">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Kevätkonsertti 2024</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./kuvat/malmitalo.jpg" class="d-block w-100" alt="">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Konsertti Malmintalossa</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                  </div>
+                </div>              
+             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
@@ -74,7 +102,9 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
+         <p> Tähän tulee vielä lisää videoida</p>
+        </main>
      <footer>
         <p>&copy; 2024 N.N-V</p>
      </footer>
