--- a/WS12/yhteystiedot.html
+++ b/WS12/yhteystiedot.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helsingin Viron Naiskuoro</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/yhteystiedot.css">
 </head>
 
@@ -12,8 +13,6 @@
     <header>
         <h1>Helsingin Viron Naiskuoro</h1>
         <button id="kirjaudu">Kirjaudu</button>
-    </header>
-
         <nav>
             <div class="wrapper">
                 <div>
@@ -30,8 +29,33 @@
                 </div>
             </div>
         </nav>
-    <footer>
-         <p>&copy; 2024 N.N-V</p>
-    </footer>
+    </header>
+        <main>
+            <section>
+                <h2>Yhteystiedot</h2>
+                <p> Osoite: <br>
+                    Viro-keskus <br>
+                    Sörnäisten rantatie 22 C <br> 
+                    00540 Helsinki <br>
+                </p>
+                <p> Puhelinnumero: <br>
+                    Silver Lumi +358451247045
+                </p>
+                <p> Sähköposti: <br>
+                    <a href="mailto:eesti.muusikastuudio@gmail.com " id="email-link">eesti.muusikastuudio@gmail.com</a>
+                </p>
+            </section>
+            <section>
+                <h2>Uusille laulajille</h2>
+                <p> Odotamme aina innolla uusia laulajia liittymään joukkoomme! Jos olet kiinnostunut laulamisesta ja haluat 
+                liittyä mukaan, rekisteröidy koelauluun.
+                </p>
+            <button type="button" class="btn btn-primary btn-lg" id="koelaulu">Rekisteröidy koelauluun</button>
+            </section>
+        </main>
+        <footer>
+             <p>&copy; 2024 N.N-V</p>
+         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
