--- a/WS12/etusivu.html
+++ b/WS12/etusivu.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helsingin Viron Naiskuoro</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/etusivu.css">
 </head>
 
 <body>
     <header>
         <h1>Helsingin Viron Naiskuoro</h1>
-        <button id="kirjaudu">Kirjaudu</button>
+        <button id="kirjaudu" class="btn btn-primary"> Kirjaudu </button>
         <nav>
             <div class="wrapper">
                 <div>
@@ -46,19 +47,35 @@
             </div>
             <div class="right">
                 <div class="ajankohtaista">
-                    <h3>Ajankohtaista</h3>
-                    <p>Kevätkonsertti: TOUKOKUU ON SAAPUNUT <br>
-                        Keskiviikko 15. toukokuu klo 19.00 - 21.00 <br>
-                        Käpylän työväentalo, Vipusentie 19, 00610 Helsinki <br>
-                        Kahvila avoinna ennen alkua ja väliajalla <br>
-                    </p>
+                    <h3>Ajankohtaista:</h3>
+                    <ul>
+                        <li>Kevätkonsertti: TOUKOKUU ON SAAPUNUT <br>
+                            Keskiviikko 15. toukokuu klo 19.00 - 21.00 <br>
+                            Käpylän työväentalo, Vipusentie 19, 00610 Helsinki <br>
+                            Kahvila avoinna ennen alkua ja väliajalla <br>
+                        </li>
+                        <li>Tarton 2024 laulu- ja tanssijuhlat <br>
+                            järjestetään 16.-22. kesäkuuta ympäri Tarton! <br>
+                        </li>
+                        <li>Vapaan Kansan Laulu XV <br>
+                            Tänä vuonna juhlistamme jo 33. uudelleenitsenäistymispäivää ja <br>
+                            sitä vietetään lauantaina 17. elokuuta Raplan laululavalla, <br>
+                            joten olemme vuosien varrella kiertäneet ympäri Viroa. <br>
+                            Raplassa päätämme tämän pitkän perinteen 15. juhlaesityksellä! <br>
+                        </li>
+                    </ul>
                 </div>
             </div>
          </div>
-
     </main>
     <footer>
         <p>&copy; 2024 N.N-V</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+    <script> document.getElementById('kirjaudu').onclick = function () {
+        window.open("login.html", "_blank");
+    }
+    </script>
 </body>
 </html>
