--- a/WS12/galleria.html
+++ b/WS12/galleria.html
@@ -6,19 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helsingin Viron Naiskuoro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybVu64G8LRV5pZZ8xj5yjw+M2JTIdnjhvVGRauRadt3DgiWDp" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-HoA2ytJA9H6xExAO6+vK8bIomf4MdNHxXhZ81PoYI0TW/jIecLNkOcBPpVJo+Khy" crossorigin="anonymous"></script>
-    <script>
-      var myCarousel = document.querySelector('carousel')
-      var carousel = new bootstrap.Carousel(myCarousel)
-    </script>
     <link rel="stylesheet" href="./styles/galleria.css">
 </head>
 
 <body>
   <header>
     <h1>Helsingin Viron Naiskuoro</h1>
-    <button id="kirjaudu">Kirjaudu</button>
+    <button id="kirjaudu" class="btn btn-primary">Kirjaudu</button>
     <nav>
         <div class="wrapper">
             <div>
@@ -36,7 +30,7 @@
         </div>
     </nav>
   </header>
-        <main>
+        <section>
            <p> Tässä sivulla olemme tuoneet esille pienen valikoiman esityksissämme otetuista kuvista ja videoista. 
             Jos haluat kuulla tai nähdä meitä enemmän, sinulla on kaksi vaihtoehtoa: joko liity kuoroomme tai 
             odota seuraavaa konserttia.
@@ -55,42 +49,36 @@
                 <img src="./kuvat/laulupidu.jpg" class="d-block w-100" alt="">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Viron Laulujuhla 2019</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./kuvat/laulupidu2.jpg" class="d-block w-100" alt="">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Viron Laulujuhla 2019</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./kuvat/markkinat.jpg" class="d-block w-100" alt="">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Martin Markkinat 2019</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
                 </div>
               </div>
                <div class="carousel-item">
                 <img src="./kuvat/markkinat2.jpg" class="d-block w-100" alt="">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Martin Markkinat 2019</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
                 </div>
               </div>
                 <div class="carousel-item">
                   <img src="./kuvat/kevadkonsert.jpg" class="d-block w-100" alt="">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Kevätkonsertti 2024</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="./kuvat/malmitalo.jpg" class="d-block w-100" alt="">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Konsertti Malmintalossa</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
                   </div>
                 </div>              
              </div>
@@ -103,11 +91,49 @@
               <span class="visually-hidden">Next</span>
             </button>
         </div>
-         <p> Tähän tulee vielä lisää videoida</p>
-        </main>
+        </section>
+        <section>
+          <div class="container py-5">
+            <h1 class="text-center mb-4">Videoita</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card video-card">
+                        <iframe class="card-img-top" src="https://www.youtube.com/embed/z_4tS5BT-Tg" allowfullscreen></iframe>
+                        <div class="card-body">
+                            <h5 class="card-title">Läksin metsa</h5>
+                            <p class="card-text">2020 musiikkivideon kuvaaminen kappaleeseen "Läksin metsään"</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card video-card">
+                        <iframe class="card-img-top" src="https://www.youtube.com/embed/7x6tYDsuEwQ?si=PkwAIvvMDctdWdjC" allowfullscreen></iframe>
+                        <div class="card-body">
+                            <h5 class="card-title">Amazing Grace</h5>
+                            <p class="card-text">2019 erikoispalkinto kansainvälisessä kuorojen pop/jazz-kilpailu-festivaalissa "LAULURAGIN 2019"</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card video-card">
+                        <iframe class="card-img-top" src="https://www.youtube.com/embed/tGutSp-Y5sk?si=dPBrAZm75iguAIg4" allowfullscreen></iframe>
+                        <div class="card-body">
+                            <h5 class="card-title">Vihmaloits</h5>
+                            <p class="card-text">Esiintyminen marraskuussa 2023 Martin markkinoilla Kaapelitehtaalla</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
      <footer>
         <p>&copy; 2024 N.N-V</p>
      </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+    <script> document.getElementById('kirjaudu').onclick = function () {
+        window.open("login.html", "_blank");
+    }
+    </script>
 </body>
 </html>
