--- a/WS12/yhteystiedot.html
+++ b/WS12/yhteystiedot.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Helsingin Viron Naiskuoro</h1>
-        <button id="kirjaudu">Kirjaudu</button>
+        <button id="kirjaudu" class="btn btn-primary">Kirjaudu</button>
         <nav>
             <div class="wrapper">
                 <div>
@@ -56,6 +56,11 @@
         <footer>
              <p>&copy; 2024 N.N-V</p>
          </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
+        <script> document.getElementById('kirjaudu').onclick = function () {
+        window.open("login.html", "_blank");
+        }
+        </script>
 </body>
 </html>
