--- a/WS12/meista.html
+++ b/WS12/meista.html
@@ -48,10 +48,10 @@
                 äänensä kehittämiseen. Haluamme tarjota yleisölle kauniita ja mielenkiintoisia hetkiä lavastetuissa kuoromusiikkikonserteissa.</p>
             </div>
             <div class="right">
-                <div class="tapahtumat">    
-                    <ul>
-                        <h3> Helsingin Viron Naiskuoron ikimuistoisimpia hetkiä ovat olleet: </h3>
-                        <li> 2020 musiikkivideon kuvaaminen kappaleeseen "Läksin metsään": 
+                <div class="tapahtumat">
+                    <h3> Helsingin Viron Naiskuoron ikimuistoisimpia hetkiä ovat olleet:</h3>    
+                    <ul> 
+                        <li> 2020 musiikkivideon kuvaaminen kappaleeseen "Läksin metsään": </li>
                         <li> 2019 erikoispalkinto kansainvälisessä kuorojen pop/jazz-kilpailu-festivaalissa "LAULURAGIN 2019"</li>
                         <li> 2019 esiintyminen Helsingin Martinmarkkinoilla</li>
                         <li> 2019 osallistuminen suureen juhlalaulujuhlaan "Minun rakkaani" Tallinnassa</li>
