--- a/WS12/galleria.html
+++ b/WS12/galleria.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="wrapper">
             <div>
-                <a href="etusivu.html">Etusivu</a>
+                <a href="index.html">Etusivu</a>
             </div>
             <div>
                 <a href="meista.html">Meistä</a>
